local-clusters/templates/vcluster_policy.yml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: sync-secret
  argocd.argoproj.io/sync-options: Replace=true
spec:
  generateExistingOnPolicyUpdate: true # (1)
  rules:
  - name: sync-secret
    match:
      any:
      - resources: # (2)
          names:
          - "vc-*"
          kinds:
          - Secret
    exclude:
      any:
      - resources:
          namespaces:
          - kube-system
          - default
          - kube-public
          - kyverno
    context: # (3)
    - name: namespace
      variable:
        value: "=(request.object.metadata.namespace)"
    - name: name
      variable:
        value: "=(request.object.metadata.name)"
    - name: ca # (4)
      variable: 
        value: "=(request.object.data.\"certificate-authority\")"
    - name: cert # (5)
      variable: 
        value: "=(request.object.data.\"client-certificate\")"
    - name: key # (6)
      variable: 
        value: "=(request.object.data.\"client-key\")"
    - name: vclusterName # (7)
      variable:
        value: "=(replace_all(namespace, 'vcluster-', ''))"
        jmesPath: 'to_string(@)'
    generate:
      kind: Secret
      apiVersion: v1
      name: "=(vclusterName):" # (8)
      namespace: argocd # (9)
      synchronize: true
      data:
        kind: Secret
        metadata:
          labels:
            argocd.argoproj.io/secret-type: cluster # (10)
            vcluster: "true"
        stringData: # (11)
          name: "=(vclusterName):"
          server: "https://=( vclusterName ).=( namespace ):443" # (12)
          config: |
            {
              "tlsClientConfig": {
                "insecure": false,
                "caData": "=(ca)",
                "certData": "=(cert)",
                "keyData": "=(key)"
              }
            }
